--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 				<artifactId>commons-net</artifactId>
 				<version>3.3</version>
 			</dependency>
-			<!-- Jackson Json处理工具包 -->
+			<!-- Jackson Json处理工具包 
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
@@ -44,13 +44,13 @@
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-annotations</artifactId>
 				<version>2.7.4</version>
-			</dependency>
-			<!-- httpclient -->
+			</dependency> -->
+			<!-- httpclient 
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
 				<version>4.3.5</version>
-			</dependency>
+			</dependency> -->
 			<!-- 单元测试 -->
 			<dependency>
 				<groupId>junit</groupId>
@@ -93,12 +93,12 @@
 				<artifactId>druid</artifactId>
 				<version>1.1.0</version>
 			</dependency>
-			<!-- Spring -->
+			<!-- Spring 
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-core</artifactId>
 				<version>4.3.3.RELEASE</version>
-			</dependency>
+			</dependency> -->
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-context</artifactId>
